# robosub

./: .gitignore  .gitmodules  .pylintrc  .travis.yml  BUILD.md  CMakeLists.txt  README.md  build.sh  package.xml  setup.py  start-sub.sh
action/: BaseVision.action  Dive.action  Gate.action  HitDie.action  Pinger.action  Roulette.action
cmake/: clang-format.cmake  cppcheck.cmake  pylint.cmake
debugging/: ardupilot.md  rc_override.md  tiscamera.md
launch/: ardupilot.launch  bottom-cam.launch  description.launch  dive-action.launch  ekf.launch  enigma.launch  example.launch  image_processing.launch  kill_switch.launch  mavros.launch  mavros_pluginlists.yaml  mission_manager.launch  missions.json  motion.launch  preprocess.launch  rosbag.launch  sub-trailer.launch  svo.launch  target_follower.launch  task-manager.launch  zed.launch
launch/simulation/: simulation_dive.launch  simulation_preprocess.launch  simulation_uuv.launch
launch/test/: test_node.launch
launch/testing/: dive_test.launch
msg/: AngularVelocity.msg
src/: __init__.py
src/actions/: CMakeLists.txt  dive.cpp  gate.cpp  hitdie.cpp  path.cpp  pinger.cpp  qual.cpp  roulette.cpp
src/cam_publisher/: package.xml
src/cam_publisher/src/: image_pub.cpp
src/constructors/: Quaternion.h  README.md
src/experimental/: CMakeLists.txt  barrelroll.cpp  extract_imu_time.py  visual_target_pub.cpp
src/heartbeat/: CMakeLists.txt  package.xml
src/helpers/: AngularPosition.cpp  AngularPosition.h  AngularVelocity.cpp  AngularVelocity.h  Bool.cpp  Bool.h  CMakeLists.txt  Header.h  LinearPosition.cpp  LinearPosition.h  LinearVelocity.cpp  LinearVelocity.h  Point.h  Pose.h  Quaternion.h  Twist.h  TwistStamped.h  Vector3.cpp  Vector3.h  param.h
src/image_processing/: CMakeLists.txt  process_node.cpp  process_node.py
src/mission-planner/: CMakeLists.txt  package.xml
src/mission-planner/cfg/: mission_planner.cfg
src/mission-planner/nodes/: server.py
src/mission-planner/src/: mission-config.json  mission_planner.py
src/missions/: CMakeLists.txt  __init__.py  mission.py  mission_manager  mission_manager.py  missions.py  test_mission_manager.py
src/missions/test/: missions.test  test_node.py
src/motion/: CMakeLists.txt  basic_target_follower.cpp  basic_target_follower.h  basic_target_follower_node.cpp  motion_controller.cpp  motion_controller.h  motion_controller_node.cpp  rcmavros.cpp  rcmavros.h  rcmavros_node.cpp
src/preprocess/: CMakeLists.txt  median_subtract.cpp  median_subtract.h  preprocess_node.cpp  preprocess_test.cpp  whitebalance.cpp  whitebalance.h
src/preprocess/filters/: bilateral_filter.cpp  bilateral_filter.h  median_subtract.h  whitebalance.cpp  whitebalance.h
src/qual/: qual.py
src/sensors/: config.py  jerk_node.py
src/simulation/: CMakeLists.txt  nav_odom_to_geom_pose.cpp
src/task-manager/: Robosub-State-Machine.xml  depth_state.py  dive_state.py  robosub_state_machine_node.py  sensor_checker.py  sensor_checker_state.py  states.py
src/task_manager/: __init__.py  accel_graph.py  armer.py  config.py  dice_state.py  dice_state_machine.py  dive_state.py  gate.py  mover.py  robosub_state_machine_node.py  run_2018.py  sensor_checker_state.py  straight_state_machine.py  task.py  visual_servo.py
src/tracking/: CMakeLists.txt  tracking.cpp
src/transform/: CMakeLists.txt  __init__.py  dive_effort_to_twiststamped.py
src/utilities/: CMakeLists.txt  gpio.cpp  gpio.h  kill_switch.cpp  kill_switch.h  kill_switch_node.cpp  switch_node.cpp
src/utilities/cam_publisher/: CMakeLists.txt
src/utilities/cam_publisher/src/: image_pub.cpp
src/vision/: hsv_converter.py
src/webgui/: CMakeLists.txt  package.xml  setup.py
src/webgui/launch/: webgui.launch
src/webgui/src/webgui/: image_converter.py  image_handling.py  image_pub.py  imager_handler.py  rospy  server.py  sys
src/webgui/src/webgui/templates/: index.html
tools/ardupilot/: Dockerfile  custom_frame_working.params  mav.parm  run-sitl.sh  sitl_gazebo.md
tools/ci/: Dockerfile  clang-format-check.sh
tools/ci-docker/: Dockerfile
tools/docker/: build.sh
tools/docker/host/: Dockerfile  README.md  install-cuda.sh  run.sh
tools/docker/jetson/: Dockerfile  arm64-sources.list  fix-links.sh  get_debs.py  install-cuda.sh  install-package-sysroot.sh  ros-entrypoint.sh  run.sh  toolchain.cmake
tools/installer/: NetworkManager.conf  README.md  dnsmasq.conf  eth0  full-install.sh  hostapd.conf  id_rsa_jetson  id_rsa_jetson.pub  install-ansible.sh  install-cdc-acm-module.yml  install-cuda.yml  install-general.yml  install-gscam.yml  install-hostapd.yml  install-key.yml  install-networking.yml  install-packages.yml  install-ros.yml  install-svo.yml  install-tensorrt.yml  install-tiscamera.yml  install-udev.yml  install-zed.yml  install.yml  inventory  jetpack-tx1.sh  jetpack-tx1.yml  jetpack-tx2.sh  jetpack-tx2.yml  jetpack.md  jetpack.sh  jetpack.yml  roscore-env  roscore.service  run-installer.sh  setup-catkin.yml  submarine.service  wlan0
tools/installer/zed-calib/: SN1010.conf  SN15912.conf
tools/pixhawk/: flash_px4.py  px_uploader.py
tools/udev/: 99-bottom-cam.rules  99-pixhawk.rules
