<?xml version="1.0"?>
<package format="1">
  <name>robosub</name>
  <version>0.0.1</version>
  <description>Software for the IllinoisAUV RoboSub Team</description>

  <maintainer email="brandem2@illinois.edu">Adrian Brandemuehl</maintainer>
  <maintainer email="sagrwl11@illinois.edu">Shubhankar Agarwal</maintainer>

  <url type="website">http://illinoisauv.com/</url>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

</package>
