<?xml version="1.0"?>
<package>
  <name>mission-planner</name>
  <version>0.0.0</version>
  <description>The mission-planner package</description>

  <maintainer email="rishi@todo.todo">rishi</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
